--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">Пинскдрев</string>
-    <string name="title_home">Home</string>
-    <string name="title_catalog">Catalog</string>
-    <string name="title_orders">Orders</string>
-    <string name="title_account">Account</string>
+    <string name="title_home">Главная</string>
+    <string name="title_catalog">Каталог</string>
+    <string name="title_orders">Корзина</string>
+    <string name="title_account">Профиль</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="large_text">
